--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
 <h2 id="title">Welcome to Ember</h2>
 
+{{#each model.mylist as |item|}}
+  XYZ: {{item}} <br>
+{{/each}}
+
+{{field-ui-wat}}
 {{outlet}}
+xxyz
